semi-working demo

--- a/floppy/blob/Makefile
+++ b/floppy/blob/Makefile
@@ -1,7 +1,10 @@
 .PHONY: all clean
 all: blob.elf
 
-blob.elf:
+blob.bin:
+	python3 generate.py
+
+blob.elf: blob.bin
 	$(OBJCOPY) -I binary -O elf32-i386 blob.bin blob.elf
 
 clean:
