experiment xzip compression

--- a/encoder/Makefile
+++ b/encoder/Makefile
@@ -1,16 +1,18 @@
 .PHONY: all clean run distclean test
-all: encoder
+all: encoded.bin
 
 FFMPEG ?= ffmpeg
 OBJS := encoder.o ops.o
 
+encoded.bin: run
+
 input.raw:
-	$(FFMPEG) -i assets/input.mkv \
-		-f lavfi -i color=gray:s=320x240 \
-		-f lavfi -i color=black:s=320x240 \
-		-f lavfi -i color=white:s=320x240 \
+	$(FFMPEG) -i assets/input.mkv -to 5:16 \
+		-f lavfi -i color=gray:s=320x200 \
+		-f lavfi -i color=black:s=320x200 \
+		-f lavfi -i color=white:s=320x200 \
 		-filter_complex \
-		"[0:v]fps=24,scale=320:240[x]; \
+		"[0:v]fps=24,scale=320:200[x]; \
 		 [x][1:v][2:v][3:v]threshold[out]" \
 		-map "[out]" \
 		-c:v rawvideo -f rawvideo -pix_fmt gray \
@@ -25,14 +27,14 @@ encoder: $(OBJS)
 run: input.raw encoder
 	./encoder
 
-test: output.raw
+test: output.raw run
 	ffplay -f rawvideo -vcodec rawvideo \
 		-pixel_format bgr8 -video_size 320x240 \
 		-framerate 24 \
 		output.raw
 
 clean:
-	rm -f encoder $(OBJS)
+	rm -f encoder $(OBJS) encoded.bin output.raw
 
 distclean: clean
 	rm -f input.raw
