--- a/floppy/blob/Makefile
+++ b/floppy/blob/Makefile
@@ -2,8 +2,13 @@
 all: blob.elf
 
 blob.bin:
-	python3 generate.py
-
+	#python generate.py || python3 generate.py
+	rm -f ../../encoder/encoded.bin.xz
+	xz -k -e -T0 -z --lzma2="dict=1MiB" \
+		--memlimit-decompress=16MiB -9 \
+		../../encoder/encoded.bin
+	cp ../../encoder/encoded.bin.xz blob.bin
+	
 blob.elf: blob.bin
 	$(OBJCOPY) -I binary -O elf32-i386 blob.bin blob.elf
 
