--- a/floppy/xz/Makefile
+++ b/floppy/xz/Makefile
@@ -3,7 +3,7 @@ OBJS = xz_dec_lzma2.elf xz_dec_stream.elf xz_crc32.elf
 all: $(OBJS)
 
 %.elf: %.c
-	$(CC) $(CFLAGS) -flto -ffreestanding -nostartfiles -I../../include -c $< -o $@
+	$(CC) $(CFLAGS) -static -nostdlib -ffreestanding -march=i486 -m32 -I../../include -c $< -o $@
 
 clean:
 	rm -f $(OBJS)
